--- a/MY WEB/index.html
+++ b/MY WEB/index.html
@@ -410,6 +410,8 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Tippu shaheed institute of technology(Diploma)
+                <div>- Electronics and
+                  Communication Engineering 
 
               <span>June 2018 - Oct 2022
 
