--- a/MY WEB/index.html
+++ b/MY WEB/index.html
@@ -397,7 +397,7 @@
 
               <h4 class="h4 timeline-item-title">Jain College of Engineering and Technology, Hubli Bachelor of Engineering (B.E) 
                 <div>- Electronics and
-                  Communication Engineering 
+                  Communication  
 
               <span>Dec 2022 - May 2025
 
@@ -411,7 +411,7 @@
 
               <h4 class="h4 timeline-item-title">Tippu shaheed institute of technology(Diploma)
                 <div>- Electronics and
-                  Communication Engineering 
+                  Communication  
 
               <span>June 2018 - Oct 2022
 
