--- a/vcard-personal-portfolio-master/vcard-personal-portfolio-master/index.html
+++ b/vcard-personal-portfolio-master/vcard-personal-portfolio-master/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">ABHISHEK N</h1>
+          <h1 class="name" title="Richard hanrick">ABHISHEK NARAGUND</h1>
 
           <p class="title">Web developer</p>
         </div>
@@ -141,7 +141,7 @@
           </li>
 
           <li class="social-item">
-            <a href="•www.linkedin.com/in/abhishek-naragund114b762b4" class="social-link">
+            <a href="www.linkedin.com/in/abhishek-naragund114b762b4" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
