--- a/vcard-personal-portfolio-master/vcard-personal-portfolio-master/index.html
+++ b/vcard-personal-portfolio-master/vcard-personal-portfolio-master/index.html
@@ -141,7 +141,7 @@
           </li>
 
           <li class="social-item">
-            <a href="www.linkedin.com/in/abhishek-naragund114b762b4" class="social-link">
+            <a href="http://www.linkedin.com/in/abhishek-naragund114b762b4" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
